# reactor-aaaaa

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  commitlint.config.js  manage.py  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/workflows/: ci.yaml  commitlint.yaml  lint.yaml  markdownlint.yaml  poetry.yaml
.ipython/profile_default/: ipython_config.json
docs/: README.md
src/reactor/: __init__.py  __main__.py
src/reactor/apps/: __init__.py  config.py  decorators.py  registry.py
src/reactor/cli/: __init__.py  main.py
src/reactor/conf/: settings.py  urls.py
src/reactor/core/: apps.py
tests/apps/: test_config.py  test_decorators.py  test_registry.py
tests/core/: test_apps.py
